<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lighter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="cross_description">cross</string>
    <string name="check_description">check</string>
    <string name="arrow_description">arrow</string>
    
	<string name="event_hello_event">Hello Event !</string>
	<string name="event_count">0</string>
	<string name="event_head_count">0</string>
	<string name="event_pull_create">Pull to Create Event</string>
	<string name="event_release_create">Release to Create Event</string>
	
	<string name="case_hello_case">Hello Case !</string>
	<string name="case_switch_list">Switch to List</string>
	<string name="case_pull_create">Pull to Create Item</string>
	<string name="case_release_create">Release to Create Item</string>
	
    <string name="set_my_event">My Events</string>
    <string name="set_themes">Themes</string>
    <string name="set_author">Author</string>
    <string name="set_abouts">About app</string>
    <string name="set_donate">Donate</string>
    
    <string name="alert_delete_event_title">Delete ?</string>
    <string name="alert_delete_event_message">Do you sure to delete all cases under this event ?</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="alert_warning">Warning</string>
    <string name="alert_warning_message">This event\'s content can not to be null !</string>
</resources>
