<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
	android:layout_height="@dimen/item_height"
	android:orientation="vertical">
    <LinearLayout
		android:id="@+id/event_linear"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/item_bg"
        android:orientation="horizontal" >
		<FrameLayout 
		    android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="10"
	        android:background="@null"
        	android:paddingBottom="@dimen/item_padding"
        	android:paddingTop="@dimen/item_padding"
	        android:paddingLeft="@dimen/item_padding">

		    <EditText
		        android:id="@+id/event_content_et"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@null"
		        android:ellipsize="end"
		        android:inputType="none"
		        android:singleLine="true"
		        android:text="@string/event_pull_create"
		        android:textColor="@color/text_color"
		        android:textSize="@dimen/item_text_size"
		        android:textStyle="bold" />

		</FrameLayout>

	    <TextView
	        android:id="@+id/event_count"
	        android:layout_width="60dp"
	        android:layout_height="wrap_content"
	        android:background="@color/item_count_bg"
	        android:padding="@dimen/item_padding"
	        android:text="@string/event_head_count"
	        android:gravity="center"
	        android:textSize="@dimen/item_text_size"
	        android:textStyle="bold" />

    </LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
		android:layout_height="@dimen/item_height"
		android:visibility="gone"
		android:gravity="center"
		android:background="#000000">
		<ImageView
		    android:id="@+id/head_image"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:contentDescription="@string/arrow_description"
		    android:src="@drawable/arrow" />
		<TextView 
		    android:id="@+id/head_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textStyle="bold"
			android:text="@string/case_switch_list"/>
	</LinearLayout>
</LinearLayout>
